HAWKSCOPE CHANGELOG
===================
http://hawkscope.googlecode.com

Changes in version 0.4.0 (2009-??-??)
-------------------------------------
* Ability to blacklist folders and drives
  http://code.google.com/p/hawkscope/issues/detail?id=16 
* Settings Window
  http://code.google.com/p/hawkscope/issues/detail?id=6 
* Automatic check for updates
  http://code.google.com/p/hawkscope/issues/detail?id=14
* Added menu reload delay to improve performance
  http://code.google.com/p/hawkscope/issues/detail?id=21
* SWT About window is now a singleton
  http://code.google.com/p/hawkscope/issues/detail?id=20
* Created a workaround for SWT tray menu popup. It's not on top of tray now.
  http://code.google.com/p/hawkscope/issues/detail?id=19

Changes in version 0.3.0 (2009-01-23)
-------------------------------------
* Added -delay (miliseconds) parameter to avoid Java Bug #6438179 that kills 
  Hawkscope auto-startup on Linux
* SWT GUI Implementation
  http://code.google.com/p/hawkscope/issues/detail?id=18
* Fixed some file opening problems
  http://code.google.com/p/hawkscope/issues/detail?id=10
* Solved tray icon ugliness
  http://code.google.com/p/hawkscope/issues/detail?id=7
* Improved menu usability 
  http://code.google.com/p/hawkscope/issues/detail?id=8
* Hawkscope menu is now always on top

Changes in version 0.2.0 (2008-10-06)
-------------------------------------
* Added quick access list to main menu, configurable via .hawkscope.properties
  "user.home" folder read from system properties is added by default
  http://code.google.com/p/hawkscope/issues/detail?id=11
* Improved About dialog:
  - Added "Environment" field to About dialog
  - Added icon to About dialog
  - Added "Copy to Clipboard" button to About dialog for copying environmental 
    report
  http://code.google.com/p/hawkscope/issues/detail?id=12
* Fixed configuration file writing
* Changed "unknown" icon
* Removed lots of unneeded dependencies to get a much lighter executable