@@ -86,6 +86,11 @@ public class Version {
         new Thread(new Runnable() {
             @Override
             public void run() {
+                try {
+                    Thread.sleep(5000L);
+                } catch (final InterruptedException e) {
+                    //yawn
+                }
                 checkForUpdate();
             }
         }, "version-updater").start();
